# ninjaDaemon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _config.yml
example/: main.cpp  simpleExample.cpp
example/pistacheExample/: config.ini  ninjaRestServer.cpp  ninjaRestServer.hpp  ninjaRestServerExample.cpp
include/: global.hpp  ninjaDaemon.hpp  ninjaLogger.hpp  ninjaStructs.hpp  ninjaTypes.hpp  ninjaUtils.hpp  ninjaWorker.hpp
scripts/: build.sh  clean.sh  submodules.sh
src/: main.cpp  ninjaDaemon.cpp  ninjaLogger.cpp  ninjaUtils.cpp  ninjaWorker.cpp
